Eyedraw doodle scss updated to @use

--- a/src/sass/3/_local_fonts.scss
+++ b/src/sass/3/_local_fonts.scss
@@ -2,7 +2,7 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 // https://google-webfonts-helper.herokuapp.com/
-// pushing WOFF2, included Greek incase used for Medical terms
+// pushing WOFF2, included Greek to allow for Medical terms
 
 /* WOFF2 for Chrome 26+, Opera 23+, Firefox 39+ */
 /* FONT: Roboto - latin_greek, local hosting */
