Icon fix for popups

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -315,7 +315,7 @@
 
 				// if icon is used in these "frame" areas fix to "dark" icon version
 				@if list.index($used-in-frame, $name) {
-					.oe-popup-content &,
+					.oe-popup &,
 					.oe-patient-popup &,
 					.oe-hotlist-panel & {
 						background-image: url(svg-dark-fixed("i/" + $svg));
