--- a/src/sass/3/openeyes/components/clinic/pathway-in-patient/__base.scss
+++ b/src/sass/3/openeyes/components/clinic/pathway-in-patient/__base.scss
@@ -25,7 +25,7 @@
 		width: $oe-event-main-extended-width;
 	}
 	@include super-wide(){
-		width: 53vw;
+		width: $oe-event-main-max;
 	}
 	
 	.close-icon-btn {
