--- a/src/sass/3/openeyes/components/sem/elements/_restrict-data-shown.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_restrict-data-shown.scss
@@ -1,61 +1,56 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
+.element {
 
-.main-event {
-	
-	.element {
-		
-		.restrict-data-shown {			
-			position:relative;
-			// interesting CSS trick
-			// make some space for scrollbars
-			// try to maintain layout alignment
-			// width:calc(100% + 10px);
-			
-			// wrap content
-			.restrict-data-content {
-				max-height:270px;	// default to approx rows-10 max height
-				overflow-y:auto;
-				padding:0 3px 0 0;	// visual breathing space for scrollbar
-				
-				
-				// allow different heights 
-				// num of rows based on standard 
-				// table row height (approx)
-				&.rows-5 {
-					height:160px;
-				}
-				
-				&.rows-10 {
-					height:270px; // fixes the height
-				}				
+	// Generic approach to handling
+	// overflowing lists, based on the "tiles"
+	// tiles: "tile-data-overflow"
+	.restrict-data-shown {
+		position: relative;
+
+		// wrap content
+		.restrict-data-content {
+			max-height: 270px; // default to approx rows-10 max height
+			overflow-y: auto;
+			padding: 0 3px 0 0; // visual breathing space for scrollbar
+
+			// allow different heights
+			// num of rows based on standard
+			// table row height (approx)
+			&.rows-5 {
+				height: 160px; // matches tiles
 			}
 
-			// IF data is hidden by the scroll
-			// this needs flagging
-			.restrict-data-shown-flag {
-				position:absolute; 
-				z-index:1;
-				bottom:0;
-				left:0;
-				right:0;
-				height:30px;
-				
-				background-color:rgba($oe-blue,0.8);
-				background-position:center center;
-				background-size:15px;
-				background-repeat: no-repeat;
-				background-image: url( svg-themed('i/arrow-down-bold') );
-				
-				&.fade-out {
-					animation: 0.2s ease-in forwards fadeout; // note: JS needs to remove class after 300 microseconds
-				}
-				
-					
+			&.rows-10 {
+				height: 270px; // fixes the height
 			}
-						
 		}
-		
+
+		// IF data is hidden by the scroll
+		// this needs flagging
+		.restrict-data-shown-flag {
+			position: absolute;
+			z-index: 1;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			height: 30px;
+
+			background-color: rgba($oe-blue, 0.8);
+			background-position: center center;
+			background-size: 15px;
+			background-repeat: no-repeat;
+			background-image: url(svg-themed("i/arrow-down-bold"));
+
+			&.fade-out {
+				animation: 0.2s ease-in forwards fadeout; // note: JS needs to remove class after 300 microseconds
+			}
+
+
+		}
+
 	}
+
 }
+
