--- a/src/sass/3/openeyes/components/sem/elements/specific/_message-states.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/_message-states.scss
@@ -4,15 +4,16 @@
 
 // Message 
 
-.main-event {
-	.element {
-		p {
-			&.message-start {
-				font-style: italic;
-			}
-			
-			// message reply is wrapped in <em>
-			&.message-reply {}
+
+.element {
+	p {
+		&.message-start {
+			font-style: italic;
+		}
+
+		// message reply is wrapped in <em>
+		&.message-reply {
 		}
 	}
 }
+
