--- a/src/sass/3/openeyes/components/sem/elements/__base.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__base.scss
@@ -2,51 +2,39 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// OE Element
-// Elements can be:
-// - Full (width)
-// OR:
-// - Tile (1 of 3 in a horizontal layout) - this is ONLY used in VIEW
+// OE Elements
+//
+// Elements can be either Full (width) or Tiled
+// Tiles (1 of 3 in a horizontal layout), are only used in VIEW
 
-// View & Edit have some specific styling.
+// View & Edit generally share styling with some specifics.
+// Also, elements maybe used in "Previous history" popups
 
-.main-event {
-	
-	.element {
-		position:relative;
-		min-height:50px; // ensure element actions and header can always be seen	
-		background-color: $oe-sem-element-bg;
-		padding:32px 5px 10px 10px; // provide top space for header/actions
-		margin:0 0 3px 0;
-		color:$oe-text;
-		font-weight: $oe-font-medium;
-			
-		// adds a line to divide R & L Eye data
-		&.eye-divider {
-			background-image: url( svg-themed('ui/element-divider') );
-			background-position: 50% 0;
-			background-repeat: repeat-y;
-			background-size:19px;
+.element {
+	position: relative;
+	min-height: 55px; // ensure element actions and header can always be seen
+	background-color: $oe-sem-element-bg;
+	padding: 32px 5px 10px 10px; // provide top space for header/actions
+	margin: 0 0 3px 0;
+	color: $oe-text;
+	font-weight: $oe-font-medium;
 
-			@include extended(){
-				background-position-x: 54.5%; // needs offseting because headers have dropped left
+	// provide desktop user with element highlight effect
+	// border required in default state to stop the re-sizing effect
+	border: 1px solid rgba(#fff, 0);
+	transition: border-color 0.2s ease-in; // animate
+
+	&:hover,
+	&:focus {
+		border-color: $oe-btn-blue;
+
+		.element-header {
+			.element-title {
+				transition: color 0.5s ease-out;
+				color: $oe-text-highlight;
 			}
 		}
-			
-		// provide desktop user with element highlight effect
-		// border required in default state to stop the re-sizing effect
-		border:1px solid rgba(#fff,0);
-		transition: border-color 0.2s ease-in; // animate
-		
-		&:hover, &:focus {
-			border-color:$oe-btn-blue;
-			.element-header {
-				.element-title {
-					transition: color 0.5s ease-out;
-					color:$oe-text-highlight;
-				}
-			}
-		}				
 	}
 }
+
 
