--- a/src/sass/3/openeyes/components/sem/elements/_element-header.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_element-header.scss
@@ -2,11 +2,7 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// OE Element
-// 
-
-// elements
-.main-event {
+.element {
 
 	.element-header {
 		position:absolute;
@@ -21,16 +17,20 @@
 			color:$oe-element-headers;
 			font-weight:$oe-font-light;
 			padding:0 0 0 10px;
+
 			
 			// on extended browser width tweak the font-size:
 			@include extended(){
 				@include font-size(13); 					// reduce font size slightly, need to fit in 3 line header
 				font-weight:$oe-font-medium;
 				line-height:1.1;
-				overflow-wrap: break-word;					// do not allow overflow into the element data
+
+				// do not allow overflow into the element data
+				// force word breaks:
+				overflow-wrap: break-word;
+				max-width: 100%; // need this for the break-word
 			}
-			
-			
+
 			// Meds Mgt has the prescription icon to show its linked
 			.oe-i-e {
 				@include extended(){
@@ -39,8 +39,7 @@
 				}
 			}
 			
-			// this hasn't been implemented but kept
-			// as a reference. it is demo'd on IDG
+			// flag error on title
 			&.error {
 				border-left: 5px solid $oe-alert-red;
 				padding:0 0 0 5px;
