--- a/src/sass/3/openeyes/components/sem/elements/_header-actions.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_header-actions.scss
@@ -5,12 +5,12 @@
 // elements
 .main-event {
 	// the extra button in the header can be used in a 'tile', e.g 'Meds Management'
-	.element:not(.tile){
+	.element:not(.tile) {
 		.element-header {
 			.extra-btn,
 			.change-complexity {
-				@include extended(){
-					margin-top:8px;
+				@include extended() {
+					margin-top: 8px;
 				}
 			}
 		}
@@ -23,24 +23,26 @@
 		.extra-btn,
 		.change-complexity {
 			cursor: pointer;
-			display:inline-block;
+			display: inline-block;
 			@include font-size(11);
 			font-weight: $oe-font-medium;
-			color:$oe-element-headers;
+			color: $oe-element-headers;
 			background: $oe-btn-default;
-			height:auto; // override button defaults
+			height: auto; // override button defaults
 			vertical-align: text-top; // override button defaults
-			padding:2px 6px 3px 6px;
-			margin:0 0 0 10px; 
-			border-radius:3px !important;
+			padding: 2px 6px 3px 6px;
+			margin: 0 0 0 10px;
+			border-radius: 3px !important;
 
 			// .active class allows JS control
-			&:hover, &:focus, &:active {
-				color: rgb(255,255,255);
+			&:hover,
+			&:focus,
+			&:active {
+				color: rgb(255, 255, 255);
 				background: $oe-btn-blue;
-			}	
+			}
 		}
-	
+
 		// added this in to handle the popups in Meds
 		// basically the same "change-complexity" but more obviously a button
 		.extra-btn {
