--- a/src/sass/3/openeyes/components/sem/elements/specific/_search-in-event.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/_search-in-event.scss
@@ -28,7 +28,7 @@
 		width: $oe-event-main-extended-width;
 	}
 	@include super-wide(){
-		width: 53vw;
+		width: $oe-event-main-max;
 	}
 	
 	.close-icon-btn {
