Replace depreciated break-word with break-all

--- a/src/sass/3/openeyes/components/whiteboard/_wb3.scss
+++ b/src/sass/3/openeyes/components/whiteboard/_wb3.scss
@@ -44,7 +44,7 @@
 			
 			overflow: hidden;		
 	
-			word-break:break-word; // make sure words 
+			word-break:break-all; // make sure words
 			
 			// basic layout stuff:
 			h3 {
