--- a/src/sass/3/openeyes/ui/add-select-search/_add-options.scss
+++ b/src/sass/3/openeyes/ui/add-select-search/_add-options.scss
@@ -39,7 +39,7 @@
 			.restrict-width {
 				display:inline-block;
 				width:$oe-ass-restricted-width; 
-				word-break: break-word;
+				word-break: break-all;
 			
 				&.extended {
 					width:$oe-ass-restricted-width-extended;
