--- a/src/sass/3/openeyes/ui/add-select-search/_optional-placeholder.scss
+++ b/src/sass/3/openeyes/ui/add-select-search/_optional-placeholder.scss
@@ -10,7 +10,7 @@
 	.optional-placeholder {
 		// match the <li> padding! 
 		margin:3px 10px 3px 8px;
-		word-break: break-word;		
+		word-break: break-all;
 		font-style: italic;
 		
 		width:$oe-ass-restricted-width;
