--- a/src/sass/3/openeyes/ui/add-select-search/_search-database.scss
+++ b/src/sass/3/openeyes/ui/add-select-search/_search-database.scss
@@ -11,7 +11,7 @@
 		.search-placeholder {
 			margin:0 0 2px 0;
 			padding:3px 18px 3px 8px;
-			word-break: break-word;		
+			word-break: break-all;
 			font-style: italic;
 			color:$oe-text-light;
 		}
