--- a/src/sass/3/openeyes/components/sem/elements/_data-grouping.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_data-grouping.scss
@@ -28,7 +28,7 @@
 	// added a wrapper to sort this
 	.comments-block {
 		text-align: left;
-		word-break: break-word;
+		word-break: break-all;
 	}
 
 }
