--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -277,7 +277,7 @@
 		"ed-zoom": "ed-zoom",
 		"ed-lock": "ed-lock",
 		"ed-trash": "ed-trash",
-		"ed-move-back": "ed-backward",
+		"ed-move-backward": "ed-backward",
 		"ed-move-forward": "ed-forward",
 		"ed-info": "ed-info",
 	);
