--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/__all.scss
@@ -6,10 +6,9 @@
 // up until now it's just been hacking the v1
 
 @import "_base";
-@import "_inputs";
+@import "more-doodles";
+@import "doo-btn";
 
-@import "ed3-doodles/_all";
-@import "ed3-editor/_all";
 
 
 
