--- a/src/sass/3/openeyes/components/sem/elements/specific/botox/_inj-marker.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/botox/_inj-marker.scss
@@ -44,7 +44,7 @@
 					transform: translate(-9px, 9px);
 					width: 18px;
 					height: 18px; 
-					background: $oe-highlighter url('../svg/in-css/light/i/remove') center center no-repeat;
+					background: $oe-highlighter url(svg-light-fixed('i/remove')) center center no-repeat;
 					background-size:14px;
 					border-radius: 50%;
 											
