--- a/src/sass/3/openeyes/__config-all.scss
+++ b/src/sass/3/openeyes/__config-all.scss
@@ -78,6 +78,11 @@ $oe-z-ed-v2: 20; // ED v2 DOM. ED v2 still in first V3 implementation
 	@return build-svg-path("dark", $svg);
 }
 
+// within "light" it needs "dark" (white) icons for buttons, etc
+@function svg-light-fixed($svg) {
+	@return build-svg-path("light", $svg);
+}
+
 
 
 
