--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -143,11 +143,11 @@ $oe-icon-opacity: 		0.5;
 $oe-ed2-panel: 			shade(rgb(218,230,241),25);
 // 3
 $oe-ed3-blue:			rgb(218,230,241); 		// note: used in Elements too!
-$oe-ed3-app-blue:		rgb(198,210,221);
-$oe-ed3-text:			rgb(50,50,60); 	
-$oe-ed3-panels: 		shade( $oe-ed3-app-blue, 10 );
-$oe-ed3-inputs:			shade( $oe-ed3-app-blue, 40 );
-$oe-ed3-input-text:		rgb(240,240,240);
+$oe-ed3-panels: 		shade( $oe-ed3-blue, 10 );
+$oe-ed3-text:			rgb(50,50,60);
+$oe-ed3-btn:            #118afb;
+$oe-ed3-icon-area: #BDCDDE;
+
 
 
 // SPECIFIC colours for areas
