--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
@@ -6,11 +6,10 @@
 // up until now it's just been hacking the v1
 
 @import "_base";
-@import "_inputs";
-
-@import "ed3-doodles/_all";
-@import "ed3-editor/_all";
-
+@import "hd";
+@import "controls";
+@import "opt";
+@import "actions";
 
 
  
