--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/__base.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/__base.scss
@@ -6,7 +6,7 @@
 	@include flex(stretch, space-between);
 
 	// reverse if on Left eye side
-	.left & {
+	.eye-l & {
 		flex-direction: row-reverse;
 		.quick {
 			text-align: right;
