--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
@@ -23,7 +23,7 @@
 		display: none;
 		position: absolute;
 		pointer-events: none;
-		bottom: 32px;;
+		top: 32px;
 		left: 0;
 		z-index: $oe-z-ed-v2 + 3;
 		white-space: nowrap;
