--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_more-doodles.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_more-doodles.scss
@@ -14,11 +14,11 @@
 	border-top: none;
 
 	// adjustments for Right or Left eye side:
-	.left & {
+	.eye-l & {
 		right: 0;
 
 	}
-	.right & {
+	.eye-r & {
 		left: 0;
 		.filter {
 			flex-direction: row-reverse;
