--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
@@ -6,8 +6,8 @@
 // up until now it's just been hacking the v1
 
 @import "_base";
-@import "hd";
-@import "controls";
+@import "doo-hd";
+@import "doo-control";
 @import "opt";
 @import "actions";
 
