--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/_opt.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/_opt.scss
@@ -2,8 +2,7 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-.doo-cxt {
-
+.doo-control {
 	.opt {
 		@include flex(center, space-between);
 		margin:0 0 2px 0;
@@ -19,9 +18,7 @@
 		> select {
 			flex:2;
 		}
-
 	}
-
 }
 
 
