--- a/src/sass/3/print/_base.scss
+++ b/src/sass/3/print/_base.scss
@@ -28,6 +28,11 @@ body {
 		height:100vh; 
 		display:flex;
 	}
+
+	&.void {
+		background: center / 50% url(build-svg-path('print','void')) repeat-y;
+	}
+
 }
 
 // empty <div>
