--- a/src/sass/3/openeyes/components/eyedraw/v3/__base.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/__base.scss
@@ -2,18 +2,20 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 // parent wrapper for ed3 elements
-.ed3 {
+// useful
+$ed3-i-width: 32px;
 
+.ed3 {
 	// need to hook off this:
 	// search doodles & doodle context options
 	position: relative;
 
-	// restrict it's width, if there is space show
+	// restrict ed3 width, if there is space show
 	// doodle context stack it can remain open.
 	// also helps with remove side icon overlapping
 	max-width:550px;
 
-	// center in the space.
+	// center within the element.
 	// gives more space for the doodle-stack
 	margin: 0 auto;
 	background: $oe-ed3-blue;
