--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
@@ -5,7 +5,7 @@
 .doo-btn {
 	position: relative;
 	display: inline-block;
-	width: 32px;
+	width: $ed3-i-width;
 	background: #ccc;
 	margin: 0 1px 1px 0;
 	cursor: pointer;
@@ -23,7 +23,7 @@
 		display: none;
 		position: absolute;
 		pointer-events: none;
-		top: 32px;
+		top: $ed3-i-width;
 		left: 0;
 		z-index: $oe-z-ed-v2 + 3;
 		white-space: nowrap;
