--- a/src/sass/3/openeyes/components/clinic/_group.scss
+++ b/src/sass/3/openeyes/components/clinic/_group.scss
@@ -8,9 +8,8 @@
 	// wraps: title (Worklist name)
 	// & table patient list
 	.oec-group {
-		margin:0 0 20px 0;	
+		margin:0 0 20px 0;
 
-		
 		header {
 			position:sticky;
 			top: 0;
@@ -37,5 +36,24 @@
 			background:$oe-blue-dark;
 			box-shadow: 0px 6px 12px 0px $oe-blue-dark;
 		}
+
+		&.no-patients {
+			header {
+				height:24px;
+				box-shadow: none;
+
+				h3 {
+					@include font-size(15);
+				}
+			}
+
+			.result-msg {
+				@include font-size(12);
+				font-weight:$oe-font-light;
+				padding:0 20px;
+				color:$oe-text-light;
+			}
+		}
+
 	}
 }
