--- a/src/sass/3/openeyes/components/clinic/_group.scss
+++ b/src/sass/3/openeyes/components/clinic/_group.scss
@@ -34,7 +34,7 @@
 			}
 			
 			background:$oe-blue-dark;
-			box-shadow: 0px 6px 12px 0px $oe-blue-dark;
+			box-shadow: 0 6px 12px 0 $oe-blue-dark;
 		}
 
 		&.no-patients {
@@ -54,6 +54,5 @@
 				color:$oe-text-light;
 			}
 		}
-
 	}
 }
